--- a/dev.lizardbyte.app.Sunshine.yml
+++ b/dev.lizardbyte.app.Sunshine.yml
@@ -5,7 +5,7 @@ sdk: org.freedesktop.Sdk
 separate-locales: false
 sdk-extensions:
   - org.freedesktop.Sdk.Extension.node20
-  # - org.freedesktop.Sdk.Extension.llvm17
+  - org.freedesktop.Sdk.Extension.llvm17
 command: dev.lizardbyte.app.Sunshine.sh
 
 finish-args:
@@ -276,19 +276,20 @@ modules:
     buildsystem: cmake-ninja
     builddir: true
     build-options:
-      append-path: /usr/lib/sdk/node20/bin:/app/cuda/bin
-      # append-path: /usr/lib/sdk/node20/bin:/app/cuda/bin:/usr/lib/sdk/llvm17/bin
-      # prepend-ld-library-path: /usr/lib/sdk/llvm17/lib
+      append-path: /usr/lib/sdk/node20/bin:/app/cuda/bin:/usr/lib/sdk/llvm17/bin
+      prepend-ld-library-path: /usr/lib/sdk/llvm17/lib
       env:
+        CC: clang
+        CXX: clang++
+        CUDA_PATH: /app/cuda
         npm_config_cache: /run/build/sunshine/flatpak-node/npm-cache
         npm_config_offline: 'true'
-        CUDA_PATH: /app/cuda
     config-opts:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
       # For Clang++ as CUDA host
-      # - -DCMAKE_CUDA_HOST_COMPILER=clang++
-      # - -DCMAKE_CUDA_COMPILER=nvcc
+      - -DCMAKE_CUDA_HOST_COMPILER=clang++
+      - -DCMAKE_CUDA_COMPILER=nvcc
       # For Clang++ as CUDA Compiler
       # - -DCMAKE_CUDA_COMPILER=clang++
       # - -DCMAKE_CUDA_FLAGS=-std=c++17
