--- a/dev.lizardbyte.app.Sunshine.yml
+++ b/dev.lizardbyte.app.Sunshine.yml
@@ -264,7 +264,7 @@ modules:
       - install -D ../$FLATPAK_ID.metainfo.xml $FLATPAK_DEST/share/metainfo/$FLATPAK_ID.metainfo.xml
       - install -D ../$FLATPAK_ID.desktop $FLATPAK_DEST/share/applications/$FLATPAK_ID.desktop
     sources:
-      - npm-generated-sources.json
+      - sources/npm-generated-sources.json
       - type: git
         url: https://github.com/LizardByte/Sunshine.git
         commit: 33c6c3e38fbd211d0234043a3a530295a92d1016
@@ -283,3 +283,7 @@ modules:
         path: dev.lizardbyte.app.Sunshine.metainfo.xml
       - type: file
         path: dev.lizardbyte.app.Sunshine.sh
+      - type: file
+        path: sources/package-lock.json
+
+
