--- a/dev.lizardbyte.app.Sunshine.yml
+++ b/dev.lizardbyte.app.Sunshine.yml
@@ -16,7 +16,7 @@ finish-args:
   - --share=ipc
   - --share=network
   - --socket=pulseaudio
-  - --socket=wayland
+  # - --socket=wayland
   - --socket=x11
   - --system-talk-name=org.freedesktop.Avahi
   # - --talk-name=org.freedesktop.Flatpak
