--- a/dev.lizardbyte.app.Sunshine.yml
+++ b/dev.lizardbyte.app.Sunshine.yml
@@ -5,7 +5,7 @@ sdk: org.freedesktop.Sdk
 separate-locales: false
 sdk-extensions:
   - org.freedesktop.Sdk.Extension.node20
-  - org.freedesktop.Sdk.Extension.llvm17
+  - org.freedesktop.Sdk.Extension.llvm18
 command: dev.lizardbyte.app.Sunshine.sh
 
 finish-args:
@@ -86,7 +86,9 @@ modules:
     build-commands:
       - rm ./*/LICENSE
       - mkdir -p $FLATPAK_DEST/cuda
-      - cp -r ./*/* $FLATPAK_DEST/cuda
+      - cp -r cuda_nvcc/* $FLATPAK_DEST/cuda
+      - cp -r cuda_cudart/* $FLATPAK_DEST/cuda
+      - cp -r libcurand/* $FLATPAK_DEST/cuda
       - mv $FLATPAK_DEST/cuda/lib $FLATPAK_DEST/cuda/lib64
     sources:
       - sources/cuda.json
@@ -280,8 +282,8 @@ modules:
     buildsystem: cmake-ninja
     builddir: true
     build-options:
-      append-path: /usr/lib/sdk/node20/bin:/usr/lib/sdk/llvm17/bin:/app/cuda/bin
-      prepend-ld-library-path: /usr/lib/sdk/llvm17/lib
+      append-path: /usr/lib/sdk/node20/bin:/usr/lib/sdk/llvm18/bin:/app/cuda/bin
+      prepend-ld-library-path: /usr/lib/sdk/llvm18/lib
       cflags: -gdwarf-4
       cxxflags: -gdwarf-4
       env:
